--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,3 +3,4 @@
 .listhead {font-family: 'Amatic SC', cursive; font-size: 2em; margin: 5px 0}
 .main {font-family: 'Josefin Sans', sans-serif;}
 li {font-family: 'Josefin Sans', sans-serif;}
+body {max-width: 1000px; margin:auto;}
